--- a/package.json
+++ b/package.json
@@ -1,43 +1,35 @@
 {
-  "_from": "eosjs@beta",
-  "_id": "eosjs@20.0.0-beta3",
-  "_inBundle": false,
-  "_integrity": "sha512-Fr3zRFlEs1sLMGxIIsck0U4BnWlfivz8xf0Es4nT0pgWlGTiufrtmeyJvnjjspSPvyGxghZc+llcM3JI/1k9pw==",
-  "_location": "/eosjs",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "tag",
-    "registry": true,
-    "raw": "eosjs@beta",
-    "name": "eosjs",
-    "escapedName": "eosjs",
-    "rawSpec": "beta",
-    "saveSpec": null,
-    "fetchSpec": "beta"
+  "name": "eosjs",
+  "version": "20.0.0-519f746.0",
+  "description": "Talk to eos API",
+  "main": "dist/index.js",
+  "scripts": {
+    "prepare": "npm run build",
+    "test": "jest",
+    "test-node": "node src/tests/nodeTest.js",
+    "lint": "tslint -c tslint.json -p tsconfig.json",
+    "lint-fix": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc -p ./tsconfig.json && cp src/ripemd.es5.js dist/ripemd.js",
+    "build-web": "webpack --config webpack.prod.js && webpack --config webpack.debug.js",
+    "clean": "rm -rf dist",
+    "docs-init": "sh .docs/scripts/init.sh",
+    "docs-build": "sh .docs/scripts/build.sh",
+    "docs-serve": "python -m SimpleHTTPServer",
+    "docs-publish": "sh .docs/scripts/publish.sh"
   },
-  "_requiredBy": [
-    "#USER",
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/eosjs/-/eosjs-20.0.0-beta3.tgz",
-  "_shasum": "b5a078d4627ad63343bae6897ea5952d2d4fd26d",
-  "_spec": "eosjs@beta",
-  "_where": "/Users/jafri/receiver-state",
-  "author": {
-    "name": "block.one"
+  "author": "block.one",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/EOSIO/eosjs.git"
   },
-  "bugs": {
-    "url": "https://github.com/EOSIO/eosjs/issues"
-  },
-  "bundleDependencies": false,
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "eosjs-ecc": "^4.0.1",
     "text-encoding": "^0.6.4"
   },
-  "deprecated": false,
-  "description": "Talk to eos API",
   "devDependencies": {
+    "@blockone/tslint-config-blockone": "^2.0.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.3.1",
     "@types/text-encoding": "^0.0.35",
@@ -48,7 +40,7 @@
     "jest": "^23.5.0",
     "jest-fetch-mock": "^1.6.5",
     "json-loader": "^0.5.7",
-    "ts-jest": "^23.1.4",
+    "ts-jest": "23.1.4",
     "ts-loader": "^4.3.1",
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
@@ -56,7 +48,6 @@
     "webpack": "^4.11.0",
     "webpack-cli": "^3.0.2"
   },
-  "homepage": "https://github.com/EOSIO/eosjs#readme",
   "jest": {
     "automock": false,
     "setupFiles": [
@@ -77,26 +68,5 @@
     },
     "testRegex": "(/src/.*(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "testEnvironment": "node"
-  },
-  "license": "MIT",
-  "main": "dist/index.js",
-  "name": "eosjs",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EOSIO/eosjs.git"
-  },
-  "scripts": {
-    "build": "tsc -p ./tsconfig.json && cp src/ripemd.es5.js dist/ripemd.js",
-    "build-web": "webpack --config webpack.prod.js && webpack --config webpack.debug.js",
-    "clean": "rm -rf dist",
-    "docs-build": "sh .docs/scripts/build.sh",
-    "docs-init": "sh .docs/scripts/init.sh",
-    "docs-publish": "sh .docs/scripts/publish.sh",
-    "docs-serve": "python -m SimpleHTTPServer",
-    "lint": "tslint -c tslint.json src/**/*.ts",
-    "lint-fix": "tslint -c tslint.json src/**/*.ts --fix",
-    "prepare": "npm run build",
-    "test": "jest"
-  },
-  "version": "20.0.0-beta3"
+  }
 }
